# g2o

g2o/examples/dynamic_slam/: CMakeLists.txt  dynamic_slam_demo.cpp
g2o/examples/dynamic_slam_graph/: CMakeLists.txt  dynamic_slam_graph.cpp  dynamic_slam_graph_incremental.cpp  g2o_errorAnalysis.m  saveWindowedBatchEveryStepSolution.m
g2o/examples/dynamic_slam_graph/Data/GraphFiles/: kitti-0001-375-425_GT_noDataAssociation.graph  kitti-0001-375-425_Meas.graph  kitti-0001-375-425_initialisation.graph  kitti-0001-375-425_result.graph  kitti-0001-375-425_resultG2O.graph  kitti-0001-375-425_result_incremental.graph  kitti-0001-375-425_result_incrementalG2O.graph  kitti-0003-0-40_GT_noDataAssociation.graph  kitti-0003-0-40_Meas.graph  kitti-0003-0-40_initialisation.graph  kitti-0003-0-40_result.g2o  kitti-0003-0-40_result_incremental.graph  kitti-0003-0-40_result_incrementalG2O.graph  kitti-0003-0-40_results.graph  kitti-0003-0-40_resultsG2O.graph  kitti-0003-0-40_staticOnly_GT_noDataAssociation.graph  kitti-0003-0-40_staticOnly_Meas.graph  kitti-0003-0-40_staticOnly_initialisation.graph  kitti-0003-0-40_staticOnly_results.graph  kitti-0003-0-40_staticOnly_resultsG2O.graph  kitti-0006-40-140_GT_constantMotion.graph  kitti-0006-40-140_Meas_constantMotion.graph  kitti-0006-40-140_initialisation_constantMotion.graph  kitti-0006-40-140_result_constantMotion.graph  kitti-0006-40-140_result_constantMotionG2O.graph
g2o/examples/dynamic_slam_graph/evaluation/: evaluation.m
g2o/examples/dynamic_slam_graph/evaluation/error/: errorAnalysis.m  objectMotionError.m
(+15 files in other folders)
